base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngrok
  labels:
    app: ngrok
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngrok
  template:
    metadata:
      labels:
        app: ngrok
    spec:
      containers:
      - name: ngrok
        image: ngrok/ngrok
        args: ["http", "80"]
        ports:
        - containerPort: 4040  # For ngrok web interface (optional)
        - containerPort: 80    # HTTP traffic to be tunneled
