base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngrok-service
  labels:
    app: ngrok
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: ngrok
